# Branch-and-Bound-templates

./: .gitignore  Cargo.toml  LICENSE  LICENSE.mit  README.md  ref.bib  thesis.kilepr  thesis.tex
.kile/: thesis.kilepr.gui
chapters/: abstract.tex  appex.tex  chapter1.tex  chapter2.tex  chapter3.tex  chapter4.tex  chapter5.tex  chapter6.tex  chapter7.tex  chapter8.tex  chapter9.tex
examples/: dpll-without-library.rs  dpll.rs  dpll_common.rs  explicit-graph.rs  knapsack-without-library.rs  knapsack.rs  knapsack_common.rs
examples/cnf-sat-samples/: aim-100-1_6-no-1.cnf  aim-50-1_6-yes1-4.cnf  dubois20.cnf  dubois21.cnf  dubois22.cnf  hole6.cnf  par8-1-c.cnf  quinn.cnf  simple.cnf  zebra_v155_c1135.cnf
examples/dpll_core/: mod.rs
examples/knapsack_common/: mod.rs
examples/knapsack_samples/: gnu_lgpl.txt  mod.rs
src/: bnb_aware_containers.rs  candidate.rs  lib.rs  main.rs
