[package]
name = "branch-and-bound"
description = "Branch and Bound / Backtracking algorithms generic template library"
version = "0.3.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/kolayne/Branch-and-Bound-templates"
readme = "README.md"

[dependencies]
binary-heap-plus = "0.5.0"
compare = "0.1.0"
