[package]
name = "branch-and-bound"
description = "A highly generic Branch and Bound / Backtracking library with a flexible API"
version = "0.5.0"
edition = "2021"
license = "MIT"
exclude = ["examples/cnf-sat-samples/*", "examples/knapsack_samples/*"]
repository = "https://github.com/kolayne/Branch-and-Bound-templates"
readme = "README.md"
rust-version = "1.56.1"

[dependencies]
binary-heap-plus = "0.5.0"
compare = "0.1.0"
